--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "restserver",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
@@ -17,5 +16,14 @@
     "start": "node index.js"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/joaororiz/TrabalhoSdFinal.git"
+  },
+  "bugs": {
+    "url": "https://github.com/joaororiz/TrabalhoSdFinal/issues"
+  },
+  "homepage": "https://github.com/joaororiz/TrabalhoSdFinal#readme",
+  "description": ""
 }
