--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "restserver",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "TrabalhoREST.js",
   "dependencies": {
     "cool-ascii-faces": "^1.3.4",
     "knex": "^0.16.5",
